@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.3.8
+Version: 1.3.9
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
